# inotify-cpp

./: CMakeLists.txt
src/: Inotify.cpp
src/include/inotify-cpp/: Inotify.h
